--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,71 +1,58 @@
-<manifest
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="dev.helpis.utilities_example"
->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="dev.helpis.utilities_example">
   <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+  <uses-permission android:name="android.permission.WAKE_LOCK"/>
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+  <!-- Bluetooth -->
+  <uses-permission android:name="android.permission.BLUETOOTH"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+  <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+  <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+  <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" />
+  <!-- Permissions options for the `storage` group -->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+  <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+  <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
   <!-- Provide required visibility configuration for API level 30 and above -->
   <queries>
     <!-- If your app checks for SMS support -->
     <intent>
-      <action android:name="android.intent.action.VIEW" />
-      <data android:scheme="sms" />
+      <action android:name="android.intent.action.VIEW"/>
+      <data android:scheme="sms"/>
     </intent>
     <!-- If your app checks for call support -->
     <intent>
-      <action android:name="android.intent.action.VIEW" />
-      <data android:scheme="tel" />
+      <action android:name="android.intent.action.VIEW"/>
+      <data android:scheme="tel"/>
     </intent>
   </queries>
-  <application
-    android:label="@string/app_name"
-    android:name="${applicationName}"
-    android:icon="@mipmap/ic_launcher"
-    android:usesCleartextTraffic="true"
-    tools:replace="android:extractNativeLibs"
-    android:extractNativeLibs="true"
-  >
-    <activity
-      android:name=".MainActivity"
-      android:exported="true"
-      android:launchMode="singleTop"
-      android:theme="@style/LaunchTheme"
-      android:configChanges="orientation|
-      keyboardHidden|
-      keyboard|
-      screenSize|
-      smallestScreenSize|
-      &#xA;
-      locale|
-      layoutDirection|
-      fontScale|
-      screenLayout|
-      density|
-      uiMode"
-      android:hardwareAccelerated="true"
-      android:windowSoftInputMode="adjustResize"
-    >
+  <application android:label="@string/app_name" android:name="${applicationName}" android:icon="@mipmap/ic_launcher" android:usesCleartextTraffic="true" tools:replace="android:extractNativeLibs" android:extractNativeLibs="true">
+    <activity android:name="com.ryanheise.audioservice.AudioServiceActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="&#xA;        orientation|&#xA;        keyboardHidden|&#xA;        keyboard|&#xA;        screenSize|&#xA;        smallestScreenSize|&#xA;        locale|&#xA;        layoutDirection|&#xA;        fontScale|&#xA;        screenLayout|&#xA;        density|&#xA;        uiMode&#xA;      " android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
          the Android process has started. This theme is visible to the user
          while the Flutter UI initializes. After that, this theme continues
          to determine the Window background behind the Flutter UI. -->
-      <meta-data
-        android:name="io.flutter.embedding.android.NormalTheme"
-        android:resource="@style/NormalTheme"
-      />
-      <meta-data
-        android:name="io.flutter.embedding.android.SplashScreenDrawable"
-        android:resource="@drawable/launch_background"
-      />
+      <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme"/>
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-
+    <service android:name="com.ryanheise.audioservice.AudioService" android:foregroundServiceType="mediaPlayback" android:exported="true" tools:ignore="Instantiatable">
+      <intent-filter>
+        <action android:name="android.media.browse.MediaBrowserService"/>
+      </intent-filter>
+    </service>
+    <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver" android:exported="true" tools:ignore="Instantiatable">
+      <intent-filter>
+        <action android:name="android.intent.action.MEDIA_BUTTON"/>
+      </intent-filter>
+    </receiver>
     <!--
       Don't delete the meta-data below.
       This is used by the Flutter tool to
@@ -74,4 +61,3 @@
     <meta-data android:name="flutterEmbedding" android:value="2"/>
   </application>
 </manifest>
-
