--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,90 +1,191 @@
 name: utilities_example
-description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+version: 0.0.1
+description: "Comprehensive example showcasing the utilities package."
+repository: "https://github.com/helpisdev/utilities_example.git"
+homepage: "https://github.com/helpisdev/utilities_example"
+issueTracker: "https://github.com/helpisdev/utilities_example/issues"
+publish_to: none
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+# dart pub global activate derry
+scripts:
+  regenerate_goldens: flutter test --update-goldens --tags=golden
+  gen:build:prepare: "flutter clean && flutter packages pub get"
+  gen:build: dart run build_runner build --delete-conflicting-outputs
+  gen:build:post: flutter pub get
+  gen:build:complete: "derry gen:build:prepare && derry gen:build && derry gen:build:post"
+  gen:watch: flutter pub run build_runner watch --delete-conflicting-outputs
+  git:init: derry git:pull && derry git:submodule:init
+  git:push: git push --recurse-submodules=on-demand --follow-tags
+  git:pull: git pull origin main
+  git:submodule:init: git submodule init && git submodule update && derry git:submodule:pull
+  git:submodule:push: git submodule foreach 'git push'
+  git:submodule:pull: git submodule update --remote --rebase
+  git:submodule:checkout: git submodule foreach 'git checkout -b main'
+  project:setup: derry git:init && melos bs && melos run get && derry gen:build:complete
 
 environment:
-  sdk: '>=3.1.0-89.0.dev <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.10.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
+  accessibility_tools: any
+  adaptive_scaffold:
+    git:
+      url: https://github.com/helpisdev/adaptive_scaffold.git
+      ref: main
+  after_layout: any
+  app_links: ^3.4.3
+  audio_session: ^0.1.14
+  autoequal: ^0.5.1
+  collection: any
+  cupertino_icons: any
+  equatable: ^2.0.5
+  flex_color_scheme: any
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_localizations:
+    sdk: flutter
+  flutter_localized_locales: ^2.0.4
+  flutter_svg: any
+  flutter_web_plugins:
+    sdk: flutter
+  go_router: ^7.1.1
+  google_fonts: any
+  handy_window: any
+  intl: any
+  just_audio: ^0.9.33
+  just_audio_background: ^0.0.1-beta.10
+  just_audio_mpv: ^0.1.6
+  just_audio_windows: ^0.2.0
+  logger: ^1.3.0
+  lottie: any
+  path: any
+  path_provider: any
+  permission_handler: ^10.2.0
+  platform: any
+  rive: any
+  shared_preferences: any
+  shimmer: ^3.0.0
+  universal_io: any
+  upgrader: any
+  url_launcher: any
+  utilities:
+    git:
+      url: https://github.com/helpisdev/utilities.git
+      ref: main
+  uuid: any
 
 dev_dependencies:
+  alchemist: any
+  autoequal_gen: ^0.5.1
+  bdd_widget_test: any
+  build_runner: any
+  build_test: any
+  build_web_compilers: any
+  checked_yaml: any
+  flutter_driver:
+    sdk: flutter
+  flutter_flavorizr: ^2.1.6
+  flutter_gen_runner: ^5.3.1
+  flutter_goldens:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  go_router_builder: ^2.0.2
+  icons_launcher: any
+  integration_test:
+    sdk: flutter
+  melos: ^3.1.0
+  mocktail: any
+  spec: any
+  test: any
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  # Enable generation of localized Strings from arb files.
+  # uncomment the next line to generate a synthetic-package, change the equivalent in l10n.yaml
+  # generate: true
+  assets:
+    - assets/
+    - assets/image/
+    # - assets/image/vector/
+    # - assets/image/raster/
+    - assets/image/data/
+    - assets/image/data/stream1_base64_data.txt
+    - assets/image/data/stream2_base64_data.txt
+    - assets/image/data/stream3_base64_data.txt
+    # - assets/multimedia/
+    # - assets/multimedia/audio/
+    # - assets/multimedia/video/
+    # - assets/pdf/
+    # - assets/font/
+    - assets/color/
+    - assets/color/colors.xml
+    # - assets/txt/
+    # - assets/animation/
+    # - assets/animation/rive/
+    # - assets/animation/lottie/
+    - assets/l10n/
+    - assets/l10n/arb/
+    - assets/l10n/arb/app_en.arb
+    - assets/l10n/arb/app_el.arb
+#  fonts:
+#    - family: Comfortaa
+#      fonts:
+#        - asset: assets/fonts/comfortaa.ttf
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+flutter_gen:
+  output: lib/src/gen/assets
+  line_length: 80
+  gen_for_package: true
+  integrations:
+    flutter_svg: true
+    rive: true
+    lottie: true
+  assets:
+    enabled: true
+  fonts:
+    enabled: true
+  colors:
+    enabled: true
+    inputs:
+      - assets/color/colors.xml
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+flavorizr:
+  ide: vscode
+  instructions:
+    [
+      assets:download,
+      assets:extract,
+      assets:clean,
+      android:buildGradle,
+      android:androidManifest,
+      android:icons,
+      ios:icons,
+      ios:plist,
+    ]
+  app:
+    android:
+      flavorDimensions: "flavor-type"
+    ios:
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  flavors:
+    development:
+      app:
+        name: "Utilities Example Development"
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+      android:
+        applicationId: "dev.helpis.utilities_example.development"
+
+      ios:
+        bundleId: "dev.helpis.utilities_example.development"
+
+    production:
+      app:
+        name: "Utilities Example Production"
+
+      android:
+        applicationId: "dev.helpis.utilities_example.production"
+
+      ios:
+        bundleId: "dev.helpis.utilities_example.production"
