--- a/build.yaml
+++ b/build.yaml
@@ -24,30 +24,30 @@ targets:
           ignore_for_file:
             - always_specify_types
             - public_member_api_docs
-      bdd_widget_test|featureBuilder:
-        generate_for:
-          - test/*.feature
-          - packages/features/**/test/features/*.feature
-        options:
-          externalSteps:
-            - package:bdd_widget_test/step/i_see_text.dart
-            - package:bdd_widget_test/step/i_dont_see_text.dart
-            - package:bdd_widget_test/step/i_see_multiple_texts.dart
-            - package:bdd_widget_test/step/i_tap_text.dart
-            - package:bdd_widget_test/step/i_see_icon.dart
-            - package:bdd_widget_test/step/i_dont_see_icon.dart
-            - package:bdd_widget_test/step/i_tap_icon.dart
-            - package:bdd_widget_test/step/i_see_rich_text.dart
-            - package:bdd_widget_test/step/i_dont_see_rich_text.dart
-            - package:bdd_widget_test/step/i_see_widget.dart
-            - package:bdd_widget_test/step/i_dont_see_widget.dart
-            - package:bdd_widget_test/step/i_see_exactly_widgets.dart
-            - package:bdd_widget_test/step/i_see_multiple_widgets.dart
-            - package:bdd_widget_test/step/i_enter_into_input_field.dart
-            - package:bdd_widget_test/step/i_see_disabled_elevated_button.dart
-            - package:bdd_widget_test/step/i_see_enabled_elevated_button.dart
-            - package:bdd_widget_test/step/i_wait.dart
-            - package:bdd_widget_test/step/i_dismiss_the_page.dart
+            # bdd_widget_test|featureBuilder:
+            #   generate_for:
+            #     - test/*.feature
+            #     - packages/features/**/test/features/*.feature
+            #   options:
+            #     externalSteps:
+            # - package:bdd_widget_test/step/i_see_text.dart
+            # - package:bdd_widget_test/step/i_dont_see_text.dart
+            # - package:bdd_widget_test/step/i_see_multiple_texts.dart
+            # - package:bdd_widget_test/step/i_tap_text.dart
+            # - package:bdd_widget_test/step/i_see_icon.dart
+            # - package:bdd_widget_test/step/i_dont_see_icon.dart
+            # - package:bdd_widget_test/step/i_tap_icon.dart
+            # - package:bdd_widget_test/step/i_see_rich_text.dart
+            # - package:bdd_widget_test/step/i_dont_see_rich_text.dart
+            # - package:bdd_widget_test/step/i_see_widget.dart
+            # - package:bdd_widget_test/step/i_dont_see_widget.dart
+            # - package:bdd_widget_test/step/i_see_exactly_widgets.dart
+            # - package:bdd_widget_test/step/i_see_multiple_widgets.dart
+            # - package:bdd_widget_test/step/i_enter_into_input_field.dart
+            # - package:bdd_widget_test/step/i_see_disabled_elevated_button.dart
+            # - package:bdd_widget_test/step/i_see_enabled_elevated_button.dart
+            # - package:bdd_widget_test/step/i_wait.dart
+            # - package:bdd_widget_test/step/i_dismiss_the_page.dart
     sources:
       include:
         - ./*
@@ -67,5 +67,5 @@ targets:
         - web/**
         - pubspec.*
     dependencies:
-      - bdd_widget_test
+      # - bdd_widget_test
       - go_router
