--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,77 +28,84 @@ environment:
   flutter: ">=3.10.0"
 
 dependencies:
-  accessibility_tools: any
+  accessibility_tools: ^1.0.0
   adaptive_scaffold:
     git:
       url: https://github.com/helpisdev/adaptive_scaffold.git
       ref: main
-  after_layout: any
+  after_layout: ^1.2.0
   app_links: ^3.4.3
-  audio_session: ^0.1.14
+  audio_session: ^0.1.16
   autoequal: ^0.5.1
-  collection: any
-  cupertino_icons: any
+  collection: ^1.17.2
+  cupertino_icons: ^1.0.5
   equatable: ^2.0.5
-  flex_color_scheme: any
+  flex_color_scheme: ^7.1.2
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_localized_locales: ^2.0.4
-  flutter_svg: any
+  flutter_svg: ^2.0.7
   flutter_web_plugins:
     sdk: flutter
-  go_router: ^7.1.1
-  google_fonts: any
-  handy_window: any
-  intl: any
-  just_audio: ^0.9.33
+  go_router: ^10.0.0
+  google_fonts: ^5.1.0
+  handy_window: ^0.3.1
+  intl: ^0.18.1
+  just_audio: ^0.9.34
   just_audio_background: ^0.0.1-beta.10
   just_audio_mpv: ^0.1.6
   just_audio_windows: ^0.2.0
-  logger: ^1.3.0
-  lottie: any
-  path: any
-  path_provider: any
-  permission_handler: ^10.2.0
-  platform: any
-  rive: any
-  shared_preferences: any
+  logger: ^2.0.1
+  lottie: ^2.4.0
+  path: ^1.8.3
+  path_provider: ^2.0.15
+  permission_handler: ^10.4.2
+  platform: ^3.1.0
+  rive: ^0.11.4
+  shared_preferences: ^2.2.0
   shimmer: ^3.0.0
-  universal_io: any
-  upgrader: any
-  url_launcher: any
+  universal_io: ^2.2.2
+  upgrader: ^8.1.0
+  url_launcher: ^6.1.12
   utilities:
     git:
       url: https://github.com/helpisdev/utilities.git
       ref: main
-  uuid: any
+  uuid: ^3.0.7
 
 dev_dependencies:
-  alchemist: any
+  alchemist: ^0.6.1
   autoequal_gen: ^0.5.1
-  bdd_widget_test: any
-  build_runner: any
-  build_test: any
-  build_web_compilers: any
-  checked_yaml: any
-  flutter_driver:
-    sdk: flutter
-  flutter_flavorizr: ^2.1.6
+  # bdd_widget_test: ^1.6.0
+  build_runner: ^2.4.6
+  # build_test: ^2.2.0
+  build_web_compilers: ^4.0.4
+  checked_yaml: ^2.0.3
+  # flutter_driver:
+  #   sdk: flutter
+  flutter_flavorizr: ^2.2.1
   flutter_gen_runner: ^5.3.1
-  flutter_goldens:
-    sdk: flutter
-  flutter_test:
-    sdk: flutter
-  go_router_builder: ^2.0.2
-  icons_launcher: any
-  integration_test:
-    sdk: flutter
+  # flutter_goldens:
+  #   sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
+  go_router_builder: ^2.2.0
+  icons_launcher: ^2.1.3
+  # integration_test:
+  #   sdk: flutter
   melos: ^3.1.0
-  mocktail: any
-  spec: any
-  test: any
+  # mocktail: ^1.0.0
+  # spec: ^0.2.3
+  # test: ^1.24.4
+
+dependency_overrides:
+  collection: ^1.18.0
+  crypto: ^3.0.3
+  intl: ^0.18.1
+  # matcher: ^0.12.16
+  # test_api: ^0.6.1
 
 flutter:
   uses-material-design: true
